[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scenes/LevelSelectionScene.gd" type="Script" id=1]
[ext_resource path="res://src/level/LevelSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Sins.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/textures/level_selection/selector.png" type="Texture" id=4]
[ext_resource path="res://src/scenes/BattleScene.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="LevelSelection" type="Node2D"]
script = ExtResource( 1 )

[node name="CameraHandler" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="CameraHandler"]
current = true
smoothing_enabled = true

[node name="Sprite" type="Sprite" parent="CameraHandler"]
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="Levels" type="Node2D" parent="."]

[node name="LevelSelector" parent="Levels" instance=ExtResource( 2 )]
scale = Vector2( 5, 5 )
battle_level = ExtResource( 7 )
level_title = "Following Players"
grid_position = Vector2( 2, 0 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="TitleLevel" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 82.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Level Title"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
